styles update and spacing fix

--- a/src/components/ExperienceWrapper/style.module.scss
+++ b/src/components/ExperienceWrapper/style.module.scss
@@ -28,9 +28,9 @@
     .toolTipMessage{
         * {
             display: inline;
-            font-size: 11;
+            font-size: 11px;
         }
-        font-size: 11;
+        font-size: 11px;
         display: none;
         position: absolute;
         width: max-content;
